@@ -2,7 +2,7 @@
 _Name=Netscape Web Browser
 _Comment=Browse the world wide web
 TryExec=netscape
-Exec=gnome-moz-remote --newwin ""
+Exec=netscape
 Icon=gnome-html.png
 Terminal=0
 Type=Application
