@@ -25,11 +25,6 @@
 #include <config.h>
 #include <libgnome/libgnome.h>
 #include <libgnomeui/libgnomeui.h>
-/*
- * FIXME: remove when this starts getting installed
- *        by libgnomeui
- */
-#include <libgnomeui/gnome-window-icon.h>
 #include <gtk/gtk.h>
 #include <glade/glade.h>
 
