@@ -1,3 +1,10 @@
+2002-02-11  Mark McLoughlin  <mark@skynet.ie>
+
+	* gnome-desktop-item.c: (get_encoding): don't like uri.
+
+	* gnome-ditem-edit.c: (gnome_ditem_edit_sync_display): free
+	icon file name.
+
 Fri Feb 01 17:37:09 2002  George Lebl <jirka@5z.com>
 
 	* gnome-desktop-item.c: make sure to notice errors on save
