@@ -1,3 +1,9 @@
+2002-02-11  Mark McLoughlin  <mark@skynet.ie>
+
+	* gnome-panel-properties.c:
+	* gnome-run.c: don't include gnome-window-icon.h directly.
+	Its in libgnomeui.h now.
+
 2002-02-11  Richard Hult  <rhult@codefactory.se>
 
 	* panel-applet-frame.c (panel_applet_frame_construct): Remove
