@@ -1,3 +1,8 @@
+2002-02-11  Mark McLoughlin  <mark@skynet.ie>
+
+	* Netscape.desktop.in: just point at netscape. We don't
+	ship gnome-moz-remote anymore.
+
 2002-02-10 John Fleck <jfleck@inkstain.net>
 
 	* applets/gen_util/help/C/mailcheck:
